Se termina el flujo de realizar corte

--- a/repository/EdurekaSelenium/test-output/old/Default suite/classes.html
+++ b/repository/EdurekaSelenium/test-output/old/Default suite/classes.html
@@ -11,6 +11,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>test_recibirCorte</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>test_realizarCierre</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>test_recalcularcorte</td>
 <td>&nbsp;</td></tr>
 <tr>
