--- a/repository/EdurekaSelenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/repository/EdurekaSelenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7be3c5">  <td>19/10/04 17:48:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestNG.test_recalcularcorte()[pri:0, instance:com.test.EdurekaSelenium.FirstTestNG@39aeed2f]">test_recalcularcorte</td> 
-  <td>main@395629617</td>   <td></td> </tr>
+<tr bgcolor="fb9ab6">  <td>19/10/11 17:46:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestNG.test_realizarCierre()[pri:0, instance:com.test.EdurekaSelenium.FirstTestNG@46d56d67]">test_realizarCierre</td> 
+  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="fb9ab6">  <td>19/10/11 17:46:23</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestNG.test_recibirCorte()[pri:0, instance:com.test.EdurekaSelenium.FirstTestNG@46d56d67]">test_recibirCorte</td> 
+  <td>main@597255128</td>   <td></td> </tr>
 </table>
